Wrong code was documented in /libapi/users/signup

--- a/docs/paths/users_signup.yaml
+++ b/docs/paths/users_signup.yaml
@@ -17,8 +17,8 @@ post:
               type: string
               example: didyouknowtameimpalaisoneguy
   responses:
-    '200':
-      description: OK
+    '201':
+      description: CREATED
       content:
         application/json:
           schema:
